--- a/resources/styles/overide.scss
+++ b/resources/styles/overide.scss
@@ -42,6 +42,8 @@ hr {
     display: inline-block;
     padding: 1.5rem 2.5rem !important;
     margin: 1.25rem 0 1.5rem;
+    max-width: 90vw;
+    overflow-x: scroll;
   }
   p {
     a {
